added two sections

--- a/index.html
+++ b/index.html
@@ -4,17 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B11-A2-kids-school</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <header>
+<header class="quicksand-font">
+    <nav class="nav-Container">
+        <div class="nav-image-school-title">
+        <img class="Nav-img" src="assets/logo.png" alt="">
+        <h3 class="nav-title">School</h3>
+    </div>
+        <ul class="list-items">
+            <li><a class="home" href="">Home</a></li>
+            <li ><a class="about" href="">About</a><li>
+            <li ><a class="facilities" href="">Facilities</a></li>
+            <li ><a class="admission" href="">Admission</a></li>
+        </ul>
+        <Button class="nav-button">Contact</Button>
+    </nav>
+</header>
+<body class="body">
+    <div class="banner">
+        <div>
+            <h3 class="banner-heading"><span class="empowring">Empowering</span>
+                students from small age <span class="blue">towards vision</span></h3>
+                <p class="banner-para">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                <button class="banner-button">Enroll Now</button>
+        </div>
+        <div class="img">
+            <img src="assets/hero-kids.png" alt="">
+        </div>
+    </div>
+    <main>
+        <div class="section-1">
+            <div>
+                <h3 class="sec-1-title">Standard Curriculum</h3>
+            </div>
+            <div class="cards">
+                    <div class="card-1">
+                        <img src="assets/kinder.png" alt="">
+                        <h2>Kinder (3-6) Years</h2>
+                        <p class="card-para">Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient</p>
+                        <a class="read-more-1" href="">Read More</a>
+                    </div>
+                    <div class="card-2">
+                        <img src="assets/elementary.png" alt="">
+                        <h2>Kinder (3-6) Years</h2>
+                        <p class="card-para">Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient</p>
+                        <a class="read-more-2" href="">Read More</a>
+                    </div>
+                    <div class="card-3">
+                        <img src="assets/middle.png" alt="">
+                        <h2>Kinder (3-6) Years</h2>
+                        <p class="card-para">Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient</p>
+                        <a class="read-more-3" href="">Read More</a>
+                    </div>
+            </div>
+            <div>
+                <div class="circle-all">
+            <div class="circle">
+                <
+            </div>
+            <div class="circle">
+                >
+            </div>
+        </div>
+    </div>
 
-    </header>
-    <body>
-        
-    </body>
-    <footer>
+    </main>
 
-    </footer>
 </body>
+<footer>
+
+</footer>
 </html>
