--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<header class="quicksand-font">
+<header>
     <nav class="nav-Container">
         <div class="nav-image-school-title">
         <img class="Nav-img" src="assets/logo.png" alt="">
@@ -67,7 +67,6 @@
                         <a class="read-more-3" href="">Read More</a>
                     </div>
             </div>
-            <div>
                 <div class="circle-all">
             <div class="circle">
                 <
@@ -77,11 +76,32 @@
             </div>
         </div>
     </div>
-
+    </div>
+    <div class="section-2">
+        <h3>Our Stories</h3>
+        <div class="img-cards">
+            <div class="sec-2-card-1">
+                <img class="border-img" src="assets/story-1.png" alt="">
+                <h3>A fun toddler coloring training on
+                    classroom</h3>
+                <p>Beautiful branding for changes by Never Now in Australia.
+                    changes is a platform for open discussion in an inclusive and
+                    collaborative environment, providing the...</p>
+            </div>
+            <div class="sec-2-card-2">
+                <img src="" alt="">
+            </div>
+            <div class="sec-2-card-3"></div>
+            <div class="sec-2-card-4"></div>
+            <div class="sec-2-card-5"></div>
+        </div>
+    </div>
     </main>
 
 </body>
 <footer>
-
+    <div>
+        
+    </div>
 </footer>
 </html>
